# backplaned-agents

./: .dockerignore  .env.example  .gitignore  DEVELOPMENT.md  Dockerfile  Dockerfile.suite  LICENSE  README.md  alembic.ini  alembic_suite.ini  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
.github/workflows/: ci.yml
bp_admin/: __init__.py  _helpers.py  app.py  asgi_utils.py  auth.py  config.py  csrf.py  upstream.py
bp_admin/pages/: __init__.py  account.py  acl.py  agents.py  audit.py  auth_pages.py  custom_agents.py  dashboard.py  invitations.py  llm_presets.py  mcp_servers.py  registrations.py  test_task.py  users.py
bp_admin/static/: admin.css
bp_admin/templates/: base.html  dashboard.html  login.html  upstream_error.html
bp_admin/templates/_partials/: agent_status_badge.html  csrf.html  effect_badge.html  invitation_status_badge.html  level_badge.html  metrics_cards.html  upstream_error.html
bp_admin/templates/account/: password.html
bp_admin/templates/acl/: _form.html  _simulate_result.html  _table_body.html  edit.html  list.html  new.html
bp_admin/templates/agents/: _table_body.html  detail.html  list.html  reprovisioned.html
bp_admin/templates/audit/: _table_body.html  list.html
bp_admin/templates/custom_agents/: form.html  list.html
bp_admin/templates/invitations/: _table_body.html  issued.html  list.html  new.html
bp_admin/templates/llm_presets/: _form.html  _table_body.html  edit.html  list.html  new.html
bp_admin/templates/mcp_servers/: form.html  list.html
bp_admin/templates/registrations/: _table_body.html  detail.html  (+2 more)
bp_agents/: __init__.py  acl.py  bootstrap.py  config_edit.py  cron_manage.py  load_acl.py  session_lock.py  settings.py
bp_agents/agents/: __init__.py  l1_common.py
bp_agents/channel/: __init__.py  core.py  render.py
bp_agents/common/: __init__.py  chunking.py  htmltext.py  loop.py  output.py  payloads.py  progress.py  prompts.py  tool_history.py  tools.py  urlsafe.py
bp_agents/db/: __init__.py  connection.py  models.py  queries.py
bp_agents/lance/: __init__.py  base.py  knowledge.py  memory.py
bp_agents/migrations/: env.py
bp_mcp_bridge/: __init__.py  __main__.py  admin_client.py  auth_resolver.py  config.py  custom_agent.py  custom_agent_bridge.py  mcp_client.py  metrics.py  server_bridge.py  supervisor.py  tool_agent.py
bp_protocol/: __init__.py  errors.py  frames.py  types.py
bp_router/: __init__.py  __main__.py  acl.py  app.py  attachments.py  catalog.py  correlation.py  delivery.py  dispatch.py  embedded.py  file_store.py  filename_utils.py  lru_cache.py  principals.py  settings.py  state.py  tasks.py  upload_utils.py  url_validation.py  visibility.py  ws_hub.py
bp_router/api/: __init__.py  admin.py  auth.py  files.py  health.py  onboard.py  registrations.py  sessions.py  tasks.py
bp_router/db/: __init__.py  connection.py  models.py  queries.py
bp_router/llm/: __init__.py  attachments.py  presets.py  presets_catalog.jsonc  retry_classification.py  service.py
bp_router/observability/: __init__.py  logging.py  metrics.py  tracing.py
bp_router/quota/: __init__.py
bp_router/security/: __init__.py  body_size.py  jwt.py  oidc.py  passwords.py  rate_limit.py  secrets.py
bp_router/storage/: __init__.py  base.py  local.py  s3.py
bp_sdk/: __init__.py  _metrics.py  agent.py  context.py  correlation.py  dispatch.py  errors.py  file_tools.py  files.py  llm.py  onboarding.py  peers.py  progress.py  settings.py  testing.py  tools.py
bp_sdk/transport/: __init__.py  base.py  inproc.py  ws.py
deploy/: .env.prod.custom.example  .env.prod.example  Caddyfile  compose.ip-ports.yml  presets.custom.jsonc.example
deploy/kakao-relay/: README.md  SETUP.md  package.json  wrangler.toml
deploy/postgres-init/: 01-create-suite-db.sql
deploy/searxng/: settings.yml
docs/: acl.md  admin-ui.md  backplaned-changelog.md  deployment.md  observability.md  scaling.md  security.md
docs/agent-suite/: acl.md  agents.md  build-plan.md  channel.md  cron.md  data-model.md  deferred-work.md  delegation.md  deployment.md  memory.md  overview.md  sessions.md  webapp.md
docs/backplaned/: admin-ui.md  changelog.md  deployment.md  observability.md  overview.md  scaling.md  security.md
docs/design/: admin-session-cookie-encryption.md  agent-tool-history-recall.md  kakao-channel.md  llm-proxyfile-attachments.md  llm-retriable-errors.md  llm-tool-response-from-result.md  mcp-bridge-custom-llm-agents.md  mcp-bridge-per-server-mode-per-tool.md  multimodal-vision-sidecar.md  oidc-webapp.md  quota-enforcement.md  router-managed-file-store.md  s3-multipart-upload.md
docs/router/: protocol.md  state.md  storage.md
docs/sdk/: core.md  services.md
examples/test_drive/: caller_agent.py  echo_agent.py  gemini_agent.py  orchestration_agent.py
scripts/: dev-up.sh  init-prod-env.sh  prod.sh  register-invitations.sh  render-caddyfile.sh  run-suite.sh  run-test-agents.sh
tests/: conftest.py  test_access_log_filter.py  test_acl.py  test_admin_agent_reprovision_ui.py  test_admin_agents_control_schema_ui.py  test_admin_change_password.py  test_admin_csrf_refresh.py  test_admin_dashboard_metrics.py  test_admin_mounted_smoke.py  test_admin_purge_user_ui.py  test_admin_registrations_submitter_filter.py  test_admin_registrations_ui.py  test_admin_smoke.py  test_admin_ui_enhancements.py  test_admin_users_credentials_ui.py  test_admit_quota_integration.py  test_agent_evict_id_release.py  test_agent_reset.py  test_await_root_result_timeout.py  test_b1_root_task_injection.py  test_bootstrap.py  test_channel_files.py  test_channel_memory_fire.py  test_chatbot_credentials.py  test_chatbot_gateway.py  test_chatbot_kakao.py  test_chatbot_registration.py  test_closed_session_gc.py  test_code_quality_refactor.py  test_correctness_audit_suspended_preset_race.py  test_correctness_lru_failclosed_failtask_txn.py  test_cron_config.py  test_custom_agents.py  test_delegation.py  test_delegation_e2e.py  test_delegation_suite.py  test_design_doc_m6.py  test_dict_handler_seams.py  test_dispatch_llm_error_branches.py  test_docs_cleanup.py  (+255 more)
(+130 files in other folders)
